<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="?attr/actionBarSize"
       android:paddingRight="20dp"
       android:paddingTop="10dp"
       android:orientation="vertical">


       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_principal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/principal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:singleLine="true"
               android:inputType="number"
               android:digits="0123456789."
               android:hint="@string/hint_principal" />

       </android.support.design.widget.TextInputLayout>


       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_interest"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/interest"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:singleLine="true"
               android:inputType="number"
               android:digits="0123456789."
               android:hint="@string/hint_interest" />

       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_tenure"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <EditText
               android:id="@+id/years"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:digits="0123456789."
               android:hint="@string/hint_years" />
       </android.support.design.widget.TextInputLayout>
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/btn_calculate"
           android:text="Calculate"
           android:background="@color/colorPrimary"
           android:layout_marginTop="40dp"
           android:textColor="@android:color/white"/>
       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_emi"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp">

           <EditText
               android:id="@+id/emi"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxEms="0"
               android:inputType="number"
               android:hint="@string/hint_emi" />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_total_Interest"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp">

           <EditText
               android:id="@+id/interest_total"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_interest_total"
               android:inputType="number" />
       </android.support.design.widget.TextInputLayout>



   </LinearLayout>

</android.support.constraint.ConstraintLayout>